# echothrift-cpp

./: .gitignore  CMakeLists.txt  README.md  client.cpp  greet.thrift  server.cpp
